--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: objective-c
 osx_image: xcode8.3
 xcode_project: SampleApp.xcodeproj
 xcode_scheme: SampleAppTests
+xcode_sdk: iphonesimulator10.3
