--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ osx_image: xcode8.3
 xcode_project: SampleApp.xcodeproj
 xcode_scheme: SampleAppTests
 xcode_sdk: iphonesimulator10.3
-script: xcodebuild clean && xcodebuild build -sdk iphonesimulator10.3 -project SampleApp.xcodeproj -scheme SampleAppTests CODE_SIGNING_REQUIRED=NO
+script: xcodebuild clean && xcodebuild build -sdk iphonesimulator10.3 -project SampleApp.xcodeproj -scheme SampleApp CODE_SIGNING_REQUIRED=NO
