--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ osx_image: xcode8.3
 xcode_project: SampleApp.xcodeproj
 xcode_scheme: SampleAppTests
 xcode_sdk: iphonesimulator10.3
-script: xcodebuild clean && xcodebuild build -sdk iphonesimulator10.3 -project SampleApp.xcodeproj -scheme SampleApp CODE_SIGNING_REQUIRED=NO
+script:
+    - xcodebuild clean && xcodebuild -scheme SampleApp -project SampleApp.xcodeproj -sdk iphonesimulator10.3 -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.3' build test
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
