--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ xcode_project: SampleApp.xcodeproj
 xcode_scheme: SampleAppTests
 xcode_sdk: iphonesimulator10.3
 script:
-    - xcodebuild clean && xcodebuild -scheme SampleApp -project SampleApp.xcodeproj -sdk iphonesimulator10.3 -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.3' -enableCodeCoverage YES ONLY_ACTIVE_ARCH=YES ENABLE_TESTABILITY=YES build test
+    - make build_test
 after_success:
     - bash <(curl -s https://codecov.io/bash) -J 'SampleApp'
