--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ osx_image: xcode8.3
 xcode_project: SampleApp.xcodeproj
 xcode_scheme: SampleAppTests
 xcode_sdk: iphonesimulator10.3
+cache:
+    - bundler
+before_script:
+    - bundle exec danger
 script:
     - make build_test
 after_success:
